--- a/app/src/main/res/layout/activity_view_wallpaper.xml
+++ b/app/src/main/res/layout/activity_view_wallpaper.xml
@@ -17,7 +17,7 @@
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/collapsing"
             android:layout_width="match_parent"
-            android:layout_height="350dp"
+            android:layout_height="match_parent"
             android:fitsSystemWindows="true"
             app:contentScrim="?attr/colorPrimary"
             app:expandedTitleTextAppearance="@android:color/transparent"
@@ -121,6 +121,7 @@
         android:layout_height="wrap_content"
         android:layout_marginRight="30dp"
         android:src="@drawable/ic_heart"
+        app:backgroundTint="@android:color/white"
         app:elevation="6dp"
         app:layout_anchor="@id/app_bar_layout"
         app:layout_anchorGravity="bottom|right|end"
@@ -132,6 +133,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="30dp"
         android:src="@drawable/ic_dowload"
+        app:backgroundTint="@android:color/white"
         app:elevation="6dp"
         app:layout_anchor="@id/app_bar_layout"
         app:layout_anchorGravity="bottom|left|end"
