--- a/app/src/main/res/layout/fragment_daily_popular.xml
+++ b/app/src/main/res/layout/fragment_daily_popular.xml
@@ -3,14 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragment.TrendingFragment">
+    tools:context=".Fragment.CategoryFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rcv_trending"
         android:layout_width="match_parent"
-        android:layout_centerInParent="true"
-        android:textSize="30sp"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent">
+
+    </android.support.v7.widget.RecyclerView>
 
 </FrameLayout>
