refactor code and update database

--- a/app/src/main/res/layout/activity_view_wallpaper.xml
+++ b/app/src/main/res/layout/activity_view_wallpaper.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ViewWallpaper">
+    tools:context=".activity.ViewWallpaper">
 
     <android.support.design.widget.CoordinatorLayout
         android:id="@+id/rootLayout"
@@ -123,7 +123,7 @@
             android:id="@+id/fab_wallpaper"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="30dp"
+            android:layout_marginEnd="30dp"
             android:src="@drawable/ic_heart"
             app:backgroundTint="@android:color/white"
             app:elevation="6dp"
