--- a/app/src/main/res/layout/activity_list_wallpaper.xml
+++ b/app/src/main/res/layout/activity_list_wallpaper.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ListWallpaper">
+    android:keepScreenOn="true"
+    tools:context=".activity.ListWallpaper">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
@@ -29,7 +30,7 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/app_bar"
         android:clipToPadding="false"
-        android:padding="0dp"></android.support.v7.widget.RecyclerView>
+        android:padding="0dp" />
 
 
 </RelativeLayout>
