--- a/app/src/main/res/layout/fragment_recents.xml
+++ b/app/src/main/res/layout/fragment_recents.xml
@@ -3,10 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragment.RecentsFragment">
+    tools:context=".fragment.RecentsFragment">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rcv_recents"
+        android:id="@+id/rcv_recent"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
